--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "mssql": "^12.0.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.10",
     "sqlite3": "^5.1.7",
